# legal-assistant

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  config.py  main.py
src/analysis/: evidence_analyzer.py  fact_extractor.py  timeline.py
src/api/routes/: analysis.py  documents.py  timeline.py
src/models/: database.py  schemas.py
src/processors/: dispatcher.py  email_processor.py  image_processor.py  pdf_processor.py  text_processor.py
src/storage/: document_store.py  vector_store.py
tests/: test_analysis.py  test_api.py  test_processors.py  test_storage.py
